/*
 * Copyright 2021, Microsoft Corp
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package nextflow.cloud.azure.batch


import nextflow.executor.BashWrapperBuilder
import nextflow.processor.TaskBean
/**
 * Custom bash wrapper builder for Azure batch tasks
 *
 * @author Paolo Di Tommaso <paolo.ditommaso@gmail.com>
 */
class AzBatchScriptLauncher extends BashWrapperBuilder {

    AzBatchScriptLauncher(TaskBean bean, AzBatchExecutor executor) {
        super(bean, new AzFileCopyStrategy(bean, executor))
    }

    @Override
    protected boolean shouldUnstageOutputs() {
        return true
    }
}
