classDiagram
    %%
    %% nextflow.cloud.azure
    %%
    Executor <|-- AzBatchExecutor
    TaskHandler <|-- AzBatchTaskHandler
    BashWrapperBuilder <|-- AzBatchScriptLauncher

    AzBatchExecutor --* AzConfig
    AzBatchExecutor --> AzBatchService : register

    AzBatchExecutor --> TaskPollingMonitor : init
    AzBatchExecutor --> AzBatchTaskHandler : submit
    AzBatchTaskHandler --> AzBatchScriptLauncher : submit

    SimpleFileCopyStrategy <|-- AzFileCopyStrategy
    AzBatchScriptLauncher --* AzFileCopyStrategy
